--- a/Proj. Final Java/ProjFinalGuilhermeMatte/nbproject/private/private.properties
+++ b/Proj. Final Java/ProjFinalGuilhermeMatte/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
-file.reference.mysql-connector-java-8.0.17.jar=C:\\Users\\182220023\\Desktop\\mysql-connector-java-8.0.17.jar
-user.properties.file=C:\\Users\\guilherme-matte\\AppData\\Roaming\\NetBeans\\22\\build.properties
+file.reference.mysql-connector-java-8.0.17.jar=C:\\Users\\Admin\\Desktop\\mysql-connector-java-8.0.17.jar
+user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\21\\build.properties
