--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /ArraysNotas/nbproject/private/
 /ArraysNotas/build/
 /Proj. Final Java/ProjFinalGuilhermeMatte/build/
+/Sistema de Gerenciamento  de Fucionários/nbproject/private/
+/Sistema de Gerenciamento  de Fucionários/build/
