--- a/Sistema de Gerenciamento  de Fucionários/nbproject/project.properties
+++ b/Sistema de Gerenciamento  de Fucionários/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Sistema_de_Gerenciamento__de_Fucion_rios
 excludes=
+file.reference.mysql-connector-java-8.0.17.jar=..\\mysql-connector-java-8.0.17.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-8.0.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
