--- a/Arrays/nbproject/project.properties
+++ b/Arrays/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Arrays
-main.class=arrays.Arrays
+main.class=CampoMoedaExemplo
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
