--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /Proj. Final Java/ProjFinalGuilhermeMatte/build/
 /Sistema de Gerenciamento  de Fucionários/nbproject/private/
 /Sistema de Gerenciamento  de Fucionários/build/
+springboot/src/main/resources/application.properties
