--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /Sistema de Gerenciamento  de Fucionários/nbproject/private/
 /Sistema de Gerenciamento  de Fucionários/build/
 springboot/src/main/resources/application.properties
+springboot/src/main/resources/application.properties
