--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 springboot/src/main/resources/application.properties
 springboot/src/main/resources/application.properties
 *.properties
+springboot/src/main/resources/application.properties
