--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=20MB
 spring.servlet.multipart.location = /tmp
+file.upload-dir=C:/xampp/htdocs/php/Products/img/
