--- a/IC/pom.xml
+++ b/IC/pom.xml
@@ -30,6 +30,11 @@
 		<java.version>23</java.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox</artifactId>
+			<version>2.0.27</version> <!-- Verifique a versão mais recente -->
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
