--- a/IC/pom.xml
+++ b/IC/pom.xml
@@ -30,12 +30,24 @@
 		<java.version>23</java.version>
 	</properties>
 	<dependencies>
+
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.4</version>
+        </dependency>
 		<dependency>
 			<groupId>org.apache.pdfbox</groupId>
 			<artifactId>pdfbox</artifactId>
-			<version>2.0.27</version> <!-- Verifique a versão mais recente -->
+			<version>2.0.29</version>
 		</dependency>
 
+		<!-- Tess4J -->
+		<dependency>
+			<groupId>net.sourceforge.tess4j</groupId>
+			<artifactId>tess4j</artifactId>
+			<version>5.5.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
