--- a/IC/src/main/resources/application.properties
+++ b/IC/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.servlet.multipart.file-size-threshold=2MB
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+server.address=0.0.0.0
+server.port=8080
+
+
+
